--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@ layout: default
   <header class="mb-8 pb-6 border-b border-gray-200">
     {%- if page.image -%}
       <div class="mb-6 flex justify-center">
-        <div class="w-full max-w-3xl">
-          <img src="{{ page.image | relative_url }}" alt="{{ page.title | escape }}" class="w-full h-auto object-contain rounded-lg">
+        <div class="w-full max-w-xl">
+          <img src="{{ page.image | relative_url }}" alt="{{ page.title | escape }}" class="w-full h-auto max-h-64 object-contain rounded-lg">
         </div>
       </div>
     {%- endif -%}
