--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,10 @@
   
   <!-- Custom styles link -->
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  
+  <!-- Pagination script -->
+  <script src="{{ "/assets/js/pagination.js" | relative_url }}" defer></script>
+  
   {%- feed_meta -%}
 
   {%- include custom-head.html -%}
