--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="max-w-6xl mx-auto px-4 sm:px-6 md:px-8 py-4 md:py-12">
   <div class="flex flex-col lg:flex-row gap-8 lg:items-start">
     <!-- Main Content -->
-    <main class="flex-1">
+    <main class="lg:w-0 lg:flex-1">
       <article class="h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="mb-8 pb-6 border-b border-gray-200">
@@ -54,7 +54,7 @@ layout: default
     </main>
 
     <!-- Sidebar - Hidden on mobile -->
-    <aside class="hidden lg:block lg:w-80 flex-shrink-0">
+    <aside class="hidden lg:block w-80 flex-shrink-0">
       {% include blog-sidebar.html %}
     </aside>
   </div>
