--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,10 @@
   <!-- Pagination script -->
   <script src="{{ "/assets/js/pagination.js" | relative_url }}" defer></script>
   
+  <!-- Calendly embed script -->
+  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <script src="{{ "/assets/js/calendly.js" | relative_url }}"></script>
+  
   {%- feed_meta -%}
 
   {%- include custom-head.html -%}
