--- a/_includes/case-study-toc.html
+++ b/_includes/case-study-toc.html
@@ -1,5 +1,5 @@
-<div class="border-l-2 border-gray-200 pl-6">
-    <div class="sticky top-8">
+<div class="sticky top-4 border-l-2 border-gray-200 pl-6" style="position: sticky; top: 2rem; max-height: calc(100vh - 4rem); overflow-y: auto;">
+    <div>
         <h3 class="text-lg font-semibold text-gray-900 mb-4">Table of Contents</h3>
         <nav class="toc-nav">
             <div id="toc-content" class="space-y-1">
