--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="max-w-6xl mx-auto px-4 sm:px-6 md:px-8 py-4 md:py-12">
-  <div class="flex flex-col lg:flex-row gap-8 lg:items-start">
+  <div class="flex flex-col lg:flex-row gap-8">
     <!-- Main Content -->
     <main class="lg:w-0 lg:flex-1">
       <article class="h-entry" itemscope itemtype="http://schema.org/Article">
