--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="{{ '/assets/images/analytiq_favicon.png' | relative_url }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/assets/images/analytiq_favicon.png' | relative_url }}">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
