--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -9,6 +9,12 @@
   - Custom CSS or JavaScript for this specific site
 {% endcomment %}
 
+<!-- Open Graph meta tags for social media sharing -->
+<meta property="og:image" content="{{ '/assets/images/doc_router_user_experience.png' | absolute_url }}">
+<meta property="og:image:width" content="2092">
+<meta property="og:image:height" content="670">
+<meta property="og:image:type" content="image/png">
+
 {%- if jekyll.environment == 'production' and site.google_analytics -%}
   {%- include google-analytics.html -%}
 {%- endif -%}
