--- a/_includes/blog-sidebar.html
+++ b/_includes/blog-sidebar.html
@@ -3,7 +3,8 @@
     <div>
         <h3 class="text-lg font-semibold text-gray-900 mb-4">Recent Posts</h3>
         <div class="space-y-3">
-            {% for post in site.posts limit:5 %}
+            {% assign sorted_posts = site.posts | sort: 'date' | reverse %}
+            {% for post in sorted_posts limit:5 %}
                 <div class="border-b border-gray-100 pb-3 last:border-b-0 last:pb-0">
                     <a href="{{ post.url | relative_url }}" class="text-gray-700 hover:text-blue-600 transition-colors">
                         <h4 class="text-sm font-medium leading-tight">{{ post.title }}</h4>
